test/libsolidity/syntaxTests/dataLocations/publicFunction/function_argument_location_specifier_test_public_calldata.sol
contract test {
    function f(bytes calldata) public;
}
// ----
// TypeError: (31-36): Location has to be memory for public function. Remove the data location keyword to fix this error.
